[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/tooltip/TooltipCollision.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/ui/endgame-stats/CompendiumProgress.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/ui/endgame-stats/RecipeMemorization.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/map/elementCircle.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/book/divisor.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
use_mipmaps = true
use_filter = true
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_mipmaps = true
use_filter = true
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 3 )

[node name="CompendiumProgress" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1290.0
margin_bottom = -215.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table" type="Control" parent="."]
margin_left = -20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Table"]
margin_left = 40.0
margin_right = 577.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Compendium Progress"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="TextureRect" parent="Table/Title"]
margin_left = 512.106
margin_top = 5.88628
margin_right = 562.106
margin_bottom = 55.8863
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Table/Title/Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -25.5
margin_right = 20.0
margin_bottom = 25.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "i"
align = 1
valign = 1

[node name="TooltipCollision" parent="Table/Title/Info" instance=ExtResource( 1 )]
position = Vector2( 25.1501, 24.5362 )

[node name="Header1" type="Label" parent="Table"]
margin_left = 40.0
margin_top = 85.0
margin_right = 240.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Recipes in book"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header2" type="Label" parent="Table"]
margin_left = 245.0
margin_top = 85.0
margin_right = 345.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Times made"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header3" type="Label" parent="Table"]
margin_left = 325.0
margin_top = 85.0
margin_right = 625.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Memorization progress"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Table"]
margin_left = 15.0
margin_top = 138.0
margin_right = 627.0
margin_bottom = 162.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Table"]
margin_left = 261.0
margin_top = 86.0
margin_right = 951.0
margin_bottom = 103.0
rect_rotation = 90.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Table"]
margin_left = 345.0
margin_top = 86.0
margin_right = 1035.0
margin_bottom = 103.0
rect_rotation = 90.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 164.0
margin_right = 630.0
margin_bottom = 764.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 602.0
margin_bottom = 1170.0
custom_constants/separation = 0

[node name="RecipeMemorization" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_right = 602.0
margin_bottom = 90.0

[node name="RecipeMemorization2" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 90.0
margin_right = 602.0
margin_bottom = 180.0

[node name="RecipeMemorization3" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 180.0
margin_right = 602.0
margin_bottom = 270.0

[node name="RecipeMemorization4" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 270.0
margin_right = 602.0
margin_bottom = 360.0

[node name="RecipeMemorization5" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 360.0
margin_right = 602.0
margin_bottom = 450.0

[node name="RecipeMemorization6" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 450.0
margin_right = 602.0
margin_bottom = 540.0

[node name="RecipeMemorization7" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 540.0
margin_right = 602.0
margin_bottom = 630.0

[node name="RecipeMemorization8" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 630.0
margin_right = 602.0
margin_bottom = 720.0

[node name="RecipeMemorization9" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 720.0
margin_right = 602.0
margin_bottom = 810.0

[node name="RecipeMemorization10" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 810.0
margin_right = 602.0
margin_bottom = 900.0

[node name="RecipeMemorization11" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 900.0
margin_right = 602.0
margin_bottom = 990.0

[node name="RecipeMemorization12" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 990.0
margin_right = 602.0
margin_bottom = 1080.0

[node name="RecipeMemorization13" parent="ScrollContainer/RecipeContainer" instance=ExtResource( 5 )]
margin_top = 1080.0
margin_right = 602.0
margin_bottom = 1170.0
